# personal-assistant-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
src/personal_assistant_mcp/: config.py  server.py  tool_errors.py  vault.py
src/personal_assistant_mcp/calendar/: client.py  tools.py
src/personal_assistant_mcp/daily/: note.py  tools.py
src/personal_assistant_mcp/digests/: digest.py  tools.py
src/personal_assistant_mcp/freshrss/: client.py  tools.py
src/personal_assistant_mcp/proton/: client.py  parse.py  tools.py
src/personal_assistant_mcp/release/: state.py  tools.py
src/personal_assistant_mcp/tasks/: __init__.py  cache.py  crud.py  model.py  parse.py  paths.py  planner.py  render.py  tools.py
src/personal_assistant_mcp/weekly/: review.py  tools.py
tests/: conftest.py  test_calendar.py  test_config.py  test_daily_note.py  test_digests.py  test_freshrss.py  test_proton_client.py  test_proton_parse.py  test_release_state.py  test_security_dependencies.py  test_server.py  test_tasks_cache.py  test_tasks_crud.py  test_tasks_parse.py  test_tasks_paths.py  test_tasks_planner.py  test_tasks_tools_serialize.py  test_tool_errors.py  test_vault.py  test_weekly_review.py
