[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant-mcp"
version = "0.1.0"
description = "MCP server for personal-assistant tasks: Obsidian tasks/notes/digests, FreshRSS, CalDAV, Proton email"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Dan Staples" },
]
keywords = ["mcp", "obsidian", "freshrss", "caldav", "personal-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "mcp[cli]>=1.12.0",
    "pydantic>=2.0",
    "obsidian-livesync-mcp @ git+https://github.com/dismantl/obsidian-livesync-mcp@v0.1.0",
    "httpx>=0.27.0",
    "icalendar>=6.0",
    "recurring-ical-events>=3.0",
]

[project.urls]
Repository = "https://git.acab.enterprises/dismantl/personal-assistant-mcp"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
